Fixed weapon type label being too large

--- a/app/assets/stylesheets/_bits.css.scss
+++ b/app/assets/stylesheets/_bits.css.scss
@@ -55,6 +55,7 @@ img {
 // Gets rid of bottom border on weapon type tooltip
 .weapon {
 	border-bottom: none;
+	height: 50px;
 	&:hover {
 		border-bottom: none;
 	}
